lawyer backend-frontend integration done

--- a/templates/Lawyer/ActivePending.html
+++ b/templates/Lawyer/ActivePending.html
@@ -165,7 +165,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Enter Lawyer ID To Search</h4>
                                     <div class="row">
-                                        <form id="TypeValidation" class="form-horizontal" action="/ActivePending" method="POST">
+                                        <form id="TypeValidation" class="form-horizontal" action="/Lawyer/ActivePending" method="POST">
                                 
                                             
                                             <div class="col-sm-8">
