--- a/templates/Lawyer/CaseHistory.html
+++ b/templates/Lawyer/CaseHistory.html
@@ -166,7 +166,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Check Case History</h4>
                                     <div class="row">
-                                        <form id="TypeValidation" class="form-horizontal" action="/CaseHistory" method="POST">
+                                        <form id="TypeValidation" class="form-horizontal" action="/Lawyer/CaseHistory" method="POST">
                                 
                                             
                                             
@@ -194,7 +194,7 @@
                         </div>
                     </div>
 
-                 {%if hearings is not defined or hearing == "" %}
+                 {%if hearings == [] %}
                  <div class="row">
                          <div class="col-md-12">
                              <div class="card">
