--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1122,6 +1122,11 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li >
+                                <a  href="{{url_for('FirmLawyers')}}" >
+                                  Associated Lawyers
+                                                                   </a>
+                            </li>
+                            <li >
                                 <a  href="{{url_for('ClientRequestsLawFirm')}}" >
                                   Client Requests
                                                                    </a>
