--- a/templates/Lawfirm/ClientRequestsLawFirm.html
+++ b/templates/Lawfirm/ClientRequestsLawFirm.html
@@ -120,6 +120,11 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li >
+                                <a  href="{{url_for('FirmLawyers')}}" >
+                                  Associated Lawyers
+                                                                   </a>
+                            </li>
+                            <li >
                                 <a  href="{{url_for('ClientRequestsLawFirm')}}" >
                                   Client Requests
                                                                    </a>
@@ -148,12 +153,41 @@
             
             <div class="content">
                 <div class="container-fluid">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-content">
+                                    <div class="row">
+                                        <form id="TypeValidation" class="form-horizontal" action="/Lawfirm/ClientRequestsLawFirm" method="POST">
+                                            <div class="col-sm-8">
+                                                <div class="row"> 
+                                                    <div class="form-group label-floating">    
+                                                        <input class="form-control" type="number" placeholder="Enter Firm ID" name="FirmID">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-sm-8">
+                                                <div class="row">
+                                                    <button type="submit" class="btn btn-rose btn-fill">Submit</button>
+                                                </div>
+                                            </div>                                            
+
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                  {%if clients==[] %}
                  <div class="row">
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">No Current Clients </h4>
+                                     <h4 class="card-title">Enter FirmID to continue</h4>
                                  </div>
                              </div>
                          </div>
@@ -204,7 +238,7 @@
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">No New Client Requests</h4>
+                                     <h4 class="card-title">Enter FirmID to continue</h4>
                                  </div>
                              </div>
                          </div>
@@ -224,27 +258,34 @@
                                                      <tbody class="text-center">
                                                             <tr>
                                                                 <td>Client ID</td>
-                                                                <td>Name</td>
-                                                                <td>DOB</td>
+                                                                <td>Firm ID</td>
+                                                                <td>Client Note</td>
+                                                                <td>Filing Number</td>
+                                                                <td>Quotation</td>
+                                                                <td>Status</td>
                                                                 <td>Accept</td>
                                                                 <td>Reject</td>
                                                             </tr>
                                                             {% for cl in clientRequests %}
                                                             <tr>
-                                                                <td>{{cl.ID}}</td>
-                                                                <td>{{cl.Name}}</td>
-                                                                <td>{{cl.DOB}}</td>   
+                                                                <td>{{cl.ClientID}}</td>
+                                                                <td>{{cl.FirmID}}</td>
+                                                                <td>{{cl.Client_Note}}</td>
+                                                                <td>{{cl.FilingNo}}</td>
+                                                                <td>{{cl.Quotation}}</td>
+                                                                <td>{{cl.Status}}</td> 
                                                                 <td>
-                                                                    <form action="/ClientRequestsLawFirm/accept" method="POST">
-                                                                        <input type="hidden" value="{{cl.ID}}" name="clientID">
-                                                                        <input class="form-control" type="text" name="lawyerID" placeholder="Enter Lawyer ID To Assign In Case Of Accept">
+                                                                    <form action="/Lawfirm/ClientRequestsLawFirm/accept" method="POST">
+                                                                        <input type="hidden" value="{{cl.FirmID}}" name="FirmID">
+                                                                        <input type="hidden" value="{{cl.ClientID}}" name="ClientID">
+                                                                        <input class="form-control" type="text" name="LawyerID" placeholder="Enter Lawyer ID To Assign In Case Of Accept">
                                                                         <input type="submit" class="btn btn-success" value="Accept">
                                                                     </form>                                                        
                                                                 </td>
                                                                 <td>
-                                                                    <form action="/ClientRequestsLawFirm/reject" method="POST">
-                                                                        <input type="hidden" value="{{cl.ID}}" name="clientID">
-                                                                    
+                                                                    <form action="/Lawfirm/ClientRequestsLawFirm/reject" method="POST">
+                                                                        <input type="hidden" value="{{cl.FirmID}}" name="FirmID">
+                                                                        <input type="hidden" value="{{cl.ClientID}}" name="ClientID">
                                                                         <input type="submit" class="btn btn-danger" value="Reject">
                                                                     </form>
                                                                 </td>
@@ -266,7 +307,7 @@
                      </div>
                      {%endif%}
                      
-                
+                     <h3>{{message}}</h3>
                 
 
             <footer class="footer">
