--- a/templates/Lawfirm/WinLose.html
+++ b/templates/Lawfirm/WinLose.html
@@ -120,6 +120,11 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li >
+                                <a  href="{{url_for('FirmLawyers')}}" >
+                                  Associated Lawyers
+                                                                   </a>
+                            </li>
+                            <li >
                                 <a  href="{{url_for('ClientRequestsLawFirm')}}" >
                                   Client Requests
                                                                    </a>
@@ -148,6 +153,36 @@
             
             <div class="content">
                 <div class="container-fluid">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-content">
+                                    <div class="row">
+                                        <form id="TypeValidation" class="form-horizontal" action="/Lawfirm/WinLose" method="POST">
+                                            <div class="col-sm-8">
+                                                <div class="row"> 
+                                                    <div class="form-group label-floating">    
+                                                        <input class="form-control" type="number" placeholder="Enter Firm ID" name="FirmID">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-sm-8">
+                                                <div class="row">
+                                                    <button type="submit" class="btn btn-rose btn-fill">Submit</button>
+                                                </div>
+                                            </div>                                            
+
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
                  {%if wins_loses==[] %}
                  <div class="row">
                          <div class="col-md-12">
@@ -165,7 +200,7 @@
                              <div class="card">
                                  
                                  <div class="card-content">
-                                     <h4 class="card-title">Total Wins/Loses For Different Firms</h4>
+                                     <h4 class="card-title">Total Wins/Loses For Entered Firm ID</h4>
                                      <div class="row">
                                          <div class="col-md-10">
                                              <div class="table-responsive table-sales">
@@ -173,18 +208,14 @@
                                                      <tbody class="text-center">
                                                          <tr>
                                                             <td>Firm ID</td>
-                                                            <td>Name</td>
                                                             <td>Wins</td>
                                                             <td>Loses</td>
                                                          </tr>
-                                                         {% for lp in wins_loses %}
                                                          <tr>
-                                                            <td>{{lp.ID}}</td>
-                                                            <td>{{lp.Name}}</td>
-                                                            <td>{{lp.Wins}}</td>
-                                                            <td>{{lp.Loses}}</td>
+                                                            <td>{{wins_loses.FirmID}}</td>
+                                                            <td>{{wins_loses.Wins}}</td>
+                                                            <td>{{wins_loses.Loses}}</td>
                                                          </tr>
-                                                         {%endfor%}
                                                      </tbody>
                                                  </table>
                                              </div>
