--- a/templates/Officer/ScheduleOfficer.html
+++ b/templates/Officer/ScheduleOfficer.html
@@ -153,7 +153,7 @@
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">Nothing to do today. Have Fun !</h4>
+                                     <h4 class="card-title">Nothing to do today. Happy Holiday!</h4>
                                  </div>
                              </div>
                          </div>
