--- a/templates/Officer/SetHearing.html
+++ b/templates/Officer/SetHearing.html
@@ -155,7 +155,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Set A Hearing: Fill In The Details</h4>
                                     <div class="row">
-                                        <form id="TypeValidation" class="form-horizontal" action="/SetHearing" method="POST">
+                                        <form id="TypeValidation" class="form-horizontal" action="/Officer/SetHearing" method="POST">
                                             <div class="col-sm-8">
                                                 <div class="row"> 
                                                     <div class="form-group label-floating">    
@@ -202,6 +202,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <h3>{{message}}</h3>
                 </div>
             </div>
         
