fixed Home page error in judges

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -132,27 +132,24 @@
                             </li>
                              <li>
                                 <a href="{{url_for('Records')}}" >
-                                  	Records
+                                    Records
                                                                    </a>
                             </li>                            
                                                     
                                                     
                             
-                             <li>
-                                <a href="{{url_for('Setnexthearing')}}" >
-							Set the date for next hearing
-                                                                 </a>
-                            </li>
+                             
                             
                             <li>
                                 <a href="{{url_for('Cases')}}" >
 
-								
-								View Active/Pending Cases                                                                  
-								 </a>
+                                
+                                View Active/Pending Cases                                                                  
+                                 </a>
                             </li>
                             
                         </ul>
+                       
                         
                     </div>
                 </div>
@@ -619,7 +616,7 @@
                         <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
                     </div>
                     <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
+                         <ul class="nav navbar-nav navbar-right">
                             <li>
                                 <a href="{{url_for('FindLawyer')}}" >
                                   Hire a Lawyer
@@ -653,6 +650,7 @@
                             </li>
                             
                         </ul>
+                       
                         
                     </div>
                 </div>
@@ -1612,7 +1610,7 @@
                         <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
                     </div>
                     <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
+                       <ul class="nav navbar-nav navbar-right">
                             <li >
                                 <a  href="{{url_for('FileFIR')}}" >
                                   File FIR
@@ -1631,6 +1629,16 @@
                             <li>
                                 <a href="{{url_for('DocUploadStatus')}}" >
                                   Document Upload Status
+                                                                   </a>
+                            </li>
+                            <li>
+                                <a href="{{url_for('CaseStatements')}}" >
+                                 Update Case Statements
+                                                                   </a>
+                            </li>
+                            <li>
+                                <a href="{{url_for('ViewDocuments')}}" >
+                                     View Case Related Documents
                                                                    </a>
                             </li>
                             
