--- a/templates/Lawyer/ActivePending.html
+++ b/templates/Lawyer/ActivePending.html
@@ -211,7 +211,7 @@
                                  <div class="card-content">
                                      <h4 class="card-title">Active Cases</h4>
                                      <div class="row">
-                                         <div class="col-md-10">
+                                         <div class="col-md-12">
                                              <div class="table-responsive table-sales">
                                                  <table class="table">
                                                      <tbody class="text-center">
@@ -280,9 +280,9 @@
                              <div class="card">
                                  
                                  <div class="card-content">
-                                     <h4 class="card-title">Pending Cases</h4>
+                                     <h4 class="card-title">Pending Cases (Civil)</h4>
                                      <div class="row">
-                                         <div class="col-md-10">
+                                         <div class="col-md-12">
                                              <div class="table-responsive table-sales">
                                                  <table class="table">
                                                     <tbody class="text-center">
@@ -294,12 +294,13 @@
                                                            <td>Accused ID</td>
                                                            <td>Accused Lawyer ID</td>
                                                            <td>Type</td>
-                                                           <td>FIR No</td>
+                                                           <td>FIR Uploaded</td>
                                                            <td>Docs Uploaded Victim</td>
                                                            <td>Docs Uploaded Accused</td>
                                                            <td>is Verified</td>
                                                         </tr>
                                                         {% for case in pending %}
+                                                        {% if case.Type == 0 %}
                                                         <tr>
                                                            <td>{{case.FilingNo}}</td>
                                                            <td>{{case.FilingDate}}</td>
@@ -308,11 +309,12 @@
                                                            <td>{{case.AccusedID}}</td>
                                                            <td>{{case.Accused_LawyerID}}</td>
                                                            <td>{{case.Type}}</td>
-                                                           <td>{{case.FIRno}}</td>
+                                                           <td>{{case.Fir_Uploaded}}</td>
                                                            <td>{{case.Doc_Uploaded_Victim}}</td>
                                                            <td>{{case.Doc_Uploaded_Accused}}</td>
                                                            <td>{{case.is_Verified}}</td>
                                                         </tr>
+                                                        {% endif %}
                                                         {%endfor%}
                                                     </tbody>
                                                  </table>
@@ -323,6 +325,56 @@
                                              <!-- <div id="worldMap" class="map"></div> -->
                                          </div>
                                      </div>
+                                     
+                                     <br>
+                                     <br>
+
+                                     <h4 class="card-title">Pending Cases (Criminal)</h4>
+                                     <div class="row">
+                                         <div class="col-md-12">
+                                             <div class="table-responsive table-sales">
+                                                 <table class="table">
+                                                    <tbody class="text-center">
+                                                        <tr>
+                                                           <td>Filing No.</td>
+                                                           <td>Filing Date</td>
+                                                           <td>Victim ID</td>
+                                                           <td>Victim Lawyer ID</td>
+                                                           <td>Accused ID</td>
+                                                           <td>Accused Lawyer ID</td>
+                                                           <td>Type</td>
+                                                           <td>FIR Uploaded</td>
+                                                           <td>Docs Uploaded Victim</td>
+                                                           <td>Docs Uploaded Accused</td>
+                                                           <td>is Verified</td>
+                                                        </tr>
+                                                        {% for case in pending %}
+                                                        {% if case.Type == 1 %}
+                                                        <tr>
+                                                           <td>{{case.FilingNo}}</td>
+                                                           <td>{{case.FilingDate}}</td>
+                                                           <td>{{case.VictimID}}</td>
+                                                           <td>{{case.Victim_LawyerID}}</td>
+                                                           <td>{{case.AccusedID}}</td>
+                                                           <td>{{case.Accused_LawyerID}}</td>
+                                                           <td>{{case.Type}}</td>
+                                                           <td>{{case.Fir_Uploaded}}</td>
+                                                           <td>{{case.Doc_Uploaded_Victim}}</td>
+                                                           <td>{{case.Doc_Uploaded_Accused}}</td>
+                                                           <td>{{case.is_Verified}}</td>
+                                                        </tr>
+                                                        {% endif %}
+                                                        {%endfor%}
+                                                    </tbody>
+                                                 </table>
+                                             </div>
+                                         </div>
+ 
+                                         <div class="col-md-6 col-md-offset-1">
+                                             <!-- <div id="worldMap" class="map"></div> -->
+                                         </div>
+                                     </div>
+                                     
                                  </div>
                              </div>
                          </div>
